chart is up in items index

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,3 +24,4 @@
 <p style="position:absolute;left:500px;top:130px">STR24</p>
 <p style="position:absolute;left:500px;top:480px">CMO5</p>
 
+<%= link_to 'HighCharts', items_path %>
