--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -28,6 +28,24 @@
       chart: {
         renderTo: "items_chart"
       },
+      title: {
+        text: "Packets"
+      },
+      xAxis: {
+        type: "Packet Name"
+      },
+      yAxis: {
+        title: {
+          text: "yAxis"
+        }
+     },
+	    series: [{
+       // pointInterval: <%= 1.day * 1000 %>,
+       //   pointStart: <%= 3.months.ago.to_i * 1000 %>,
+       data: [ 1, 3, 5, 3, 7, 2],
+       color: '#580000'
+	      
+	    }]
    });
   });
 </script>
