--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
+<b><p align="right"><%= link_to 'HighCharts', items_path %></p></b>
 <body>
 <h1><font face="arial">eco1</font></h1>
 <div style="position:relative">Building Life Cycle Site</div>
@@ -23,5 +24,3 @@
 <p style="position:absolute;left:200px;top:480px">PTG3</p>
 <p style="position:absolute;left:500px;top:130px">STR24</p>
 <p style="position:absolute;left:500px;top:480px">CMO5</p>
-
-<%= link_to 'HighCharts', items_path %>
