--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -32,7 +32,9 @@
         text: "Packets"
       },
       xAxis: {
-        type: "Packet Name"
+        title: {
+          text: "xAxis"
+        }
       },
       yAxis: {
         title: {
@@ -42,7 +44,7 @@
 	    series: [{
        // pointInterval: <%= 1.day * 1000 %>,
        //   pointStart: <%= 3.months.ago.to_i * 1000 %>,
-       data: [ 1, 3, 5, 3, 7, 2],
+       data: <%= @items.count %>,
        color: '#580000'
 	      
 	    }]
@@ -50,3 +52,6 @@
   });
 </script>
 <div id="items_chart" style="width:560px; height:300px;"></div>
+<br/><br/>
+
+<b><a href="http://www.highcharts.com/ref/">API for Highcharts</a></b>
