--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,26 +1,28 @@
 <b><p align="right"><%= link_to 'HighCharts', items_path %></p></b>
 <body>
-<h1><font face="arial">eco1</font></h1>
-<div style="position:relative">Building Life Cycle Site</div>
-<div style="position:relative;top:100px">economy</div>
-<div style="position:relative;left:300px;top:400px">experience</div>
+<h1><font face="arial" style="position:absolute;left:40px">eco1</font></h1>
+<div style="position:absolute;left:160px;top:50px">Building Life Cycle Site</div>
 </body>
+
+<p style="position:absolute;left:350px;top:280px;width:150px">Requirements: each of these needs to be a css square, different shades of grey color,  called VN03, FN51, ... (if you set up VM03 I can do the rest) </p>
 
 <div id="orders_chart" style="width:360px; height:300px;position:relative;left:100px"></div>
 
-<p style="position:absolute;left:100px;top:180px">DLE5</p>
-<p style="position:absolute;left:500px;top:180px">DRDE28</p>
-<p style="position:absolute;left:200px;top:320px">QOC1</p>
-<p style="position:absolute;left:300px;top:180px">ICA11</p>
-<p style="position:absolute;left:400px;top:280px">ECM20</p>
-<p style="position:absolute;left:150px;top:200px">VM03</p>
-<p style="position:absolute;left:350px;top:100px">FN51</p>
-<p style="position:absolute;left:120px;top:380px">ISC6</p>
-<p style="position:absolute;left:220px;top:300px">SMP27</p>
-<p style="position:absolute;left:100px;top:110px">EDC18</p>
-<p style="position:absolute;left:390px;top:390px">CPP21</p>
-<p style="position:absolute;left:400px;top:350px">DLE28</p>
-<p style="position:absolute;left:420px;top:160px">RMR22</p>
-<p style="position:absolute;left:200px;top:480px">PTG3</p>
-<p style="position:absolute;left:500px;top:130px">STR24</p>
-<p style="position:absolute;left:500px;top:480px">CMO5</p>
+<p style="position:absolute;left:210px;top:360px">DLE5</p>
+<p style="position:absolute;left:60px;top:340px">DRDE28</p>
+<p style="position:absolute;left:95px;top:420px">QOC1</p>
+<p style="position:absolute;left:30px;top:290px">ICA11</p>
+<p style="position:absolute;left:150px;top:310px">ECM20</p>
+<p style="position:absolute;left:90px;top:100px">VM03</p>
+<p style="position:absolute;left:30px;top:140px">FN51</p>
+<p style="position:absolute;left:60px;top:190px">ISC6</p>
+<p style="position:absolute;left:200px;top:220px">SMP27</p>
+<p style="position:absolute;left:90px;top:240px">EDC18</p>
+<p style="position:absolute;left:30px;top:400px">CPP21</p>
+<p style="position:absolute;left:150px;top:160px">DLE28</p>
+<p style="position:absolute;left:160px;top:450px">RMR22</p>
+<p style="position:absolute;left:210px;top:490px">PTG3</p>
+<p style="position:absolute;left:60px;top:510px">STR24</p>
+<p style="position:absolute;left:100px;top:550px">CMO5</p>
+
+<h1><font face="arial" style="position:absolute;left:40px;top:600px">about</font></h1>
