--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,30 +1,51 @@
-<b><p align="right"><%= link_to 'HighCharts', items_path %></p></b>
+<b><p style="display:none;align="right"><%= link_to 'HighCharts', items_path %></p></b>
 <body>
-<h1><font face="arial" style="position:absolute;left:40px">eco1</font></h1>
-<div style="position:absolute;left:160px;top:50px">Building Life Cycle Site</div>
+<h1><font face="arial" style="position:absolute;left:40px;top:50px">infravironment</font></h1>
+<div style="position:absolute;left:240px;top:50px">Building Life Cycle Site</div>
 </body>
 
-<p style="position:absolute;left:350px;top:280px;width:150px">Requirements: each of these needs to be a css square, different shades of grey color,  called VN03, FN51, ... (if you set up VM03 I can do the rest) </p>
 
 <div id="orders_chart" style="width:360px; height:300px;position:relative;left:100px"></div>
+<p style="display:none;position:absolute;left:100px;top:200px"><%= @adaptivereuse %></p>
+<p style="position:absolute;left:100px;top:220px"><%= @architecture %></p>
+<p style="display:none;position:absolute;left:100px;top:180px"><%= @openinnovation %></p>
+<p style="position:absolute;left:80px;top:180px"><%= @cloudcomputing %></p>
+<p style="position:absolute;left:100px;top:180px"><%= @usgbc %></p>
+<p style="position:absolute;left:100px;top:120px"><%= @cleanair %></p>
+<p style="position:absolute;left:150px;top:200px"><%= @greenrealestate %></p>
+<p style="position:absolute;left:60px;top:140px"><%= @smallbusiness %></p>
+<p style="position:absolute;left:130px;top:260px"><%= @greenbuilding %></p>
+<p style="position:absolute;left:160px;top:300px"><%= @applab %></p>
+<p style="position:absolute;left:160px;top:380px"><%= @biodiversity %></p>
+<p style="position:absolute;left:80px;top:280px"><%= @crm %></p>
+<p style="position:absolute;left:150px;top:360px"><%= @construction %></p>
+<p style="position:absolute;left:80px;top:400px"><%= @bim %></p>
+<p style="position:absolute;left:110px;top:420px"><%= @energy %></p>
+<p style="position:absolute;left:60px;top:340px"><%= @solar %></p>
+<p style="position:absolute;left:100px;top:320px"><%= @gis %></p>
+<p style="position:absolute;left:140px;top:160px"><%= @aia %></p>
+<p style="position:absolute;left:60px;top:240px"><%= @inhabitat %></p>
+<p style="display:none;position:absolute;left:500px;top:480px"><%= @sustainable %></p>
 
-<p style="position:absolute;left:100px;top:180px"><%= @architecture %></p>
-<!-- <p style="position:absolute;left:500px;top:180px"></p>
-<p style="position:absolute;left:200px;top:320px">QOC1</p>
-<p style="position:absolute;left:300px;top:180px">ICA11</p>
-<p style="position:absolute;left:400px;top:280px">ECM20</p>
-<p style="position:absolute;left:150px;top:200px">VM03</p>
-<p style="position:absolute;left:350px;top:100px">FN51</p>
-<p style="position:absolute;left:120px;top:380px">ISC6</p>
-<p style="position:absolute;left:220px;top:300px">SMP27</p> -->
-<p style="position:absolute;left:100px;top:110px"><%= @economy %></p>
-<!-- <p style="position:absolute;left:390px;top:390px">CPP21</p>
-<p style="position:absolute;left:400px;top:350px">DLE28</p>
-<p style="position:absolute;left:420px;top:160px">RMR22</p>
-<p style="position:absolute;left:200px;top:480px">PTG3</p>
-<p style="position:absolute;left:500px;top:130px">STR24</p> -->
-<p style="position:absolute;left:500px;top:480px"><%= @sustainable %></p>
+<div>
+<p style="position:absolute;left:80px;top:320px">~</p><!-- <p>UQC41</p> -->
+<p style="position:absolute;left:40px;top:240px">~</p><!-- <p>NIA11</p> -->
+<p style="position:absolute;left:120px;top:260px">~</p><!-- <p>MET20</p> -->
+<p style="position:absolute;left:80px;top:120px">~</p><!-- <p>MV03</p> -->
+<p style="position:absolute;left:40px;top:140px">~</p><!-- <p>NF51</p> -->
+<p style="position:absolute;left:60px;top:180px">~</p><!-- <p>SNC7</p> -->
+<p style="position:absolute;left:140px;top:200px">~</p><!-- <p>MSP27</p> -->
+<p style="position:absolute;left:40px;top:340px">~</p><!-- <p>PCP21</p> -->
+<p style="position:absolute;left:140px;top:300px">~</p><!-- <p>EDT28</p> -->
+<p style="position:absolute;left:120px;top:360px">~</p><!-- <p>MRO22</p> -->
+<p style="position:absolute;left:140px;top:380px">~</p><!-- <p>TPG3</p> -->
+<p style="position:absolute;left:60px;top:400px">~</p><!-- <p>TSR24</p> -->
+<p style="position:absolute;left:120px;top:160px">~</p><!-- <p>PLR40</p> -->
+<p style="position:absolute;left:80px;top:220px">~</p><!-- <p>DET18</p> -->
+<p style="position:absolute;left:80px;top:420px">~</p><!-- <p>PCS25</p> -->
+<p style="position:absolute;left:60px;top:280px">~</p><!-- <p>IDR15</p> -->
+</div>
 
-<p style="position:absolute;left:100px;top:550px">CMO5</p>
+<h1><font face="arial" style="position:absolute;left:40px;top:500px">email</font></h1><p style="position:absolute;top:487px;left:120px">for infravironment (design by E. Downie, AIA increasing the capacity of Architecture to improve on the latest discoveries)</p>
 
-<h1><font face="arial" style="position:absolute;left:40px;top:600px">about</font></h1>
+ <p style="position:absolute;top:640px;left:160px">Dec. 2011 terms of use: less stringent than exceptions to, or exclusions from, those of any isp</p>
