--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,11 +11,13 @@
 <p style="display:none;position:absolute;left:100px;top:180px"><%= @openinnovation %></p>
 <p style="position:absolute;left:80px;top:180px"><%= @cloudcomputing %></p>
 <p style="position:absolute;left:100px;top:180px"><%= @usgbc %></p>
-<p style="position:absolute;left:100px;top:120px"><%= @cleanair %></p>
-<p style="position:absolute;left:150px;top:200px"><%= @greenrealestate %></p>
+<p style="display:none;position:absolute;left:100px;top:120px"><%= @cleanair %></p>
+<p style="display:none;position:absolute;left:150px;top:200px"><%= @greenrealestate %></p>
 <p style="position:absolute;left:60px;top:140px"><%= @smallbusiness %></p>
 <p style="position:absolute;left:130px;top:260px"><%= @greenbuilding %></p>
 <p style="position:absolute;left:160px;top:300px"><%= @applab %></p>
+<p style="position:absolute;left:150px;top:200px"><%= @incandescent %></p>
+<p style="position:absolute;left:100px;top:120px"><%= @software %></p>
 <p style="position:absolute;left:160px;top:380px"><%= @biodiversity %></p>
 <p style="position:absolute;left:80px;top:280px"><%= @crm %></p>
 <p style="position:absolute;left:150px;top:360px"><%= @construction %></p>
