--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
 <div style="position:absolute;left:240px;top:50px">Building Life Cycle Site</div>
 </body>
 
-
+<div id="tweet-results">
 <div id="orders_chart" style="width:360px; height:300px;position:relative;left:100px"></div>
 <p style="display:none;position:absolute;left:100px;top:200px"><%= @adaptivereuse %></p>
 <p style="position:absolute;left:100px;top:220px"><%= @architecture %></p>
@@ -28,9 +28,9 @@
 <p style="position:absolute;left:140px;top:160px"><%= @aia %></p>
 <p style="position:absolute;left:60px;top:240px"><%= @inhabitat %></p>
 <p style="display:none;position:absolute;left:500px;top:480px"><%= @sustainable %></p>
-
+</div>
 <div>
-<p style="position:absolute;left:80px;top:320px">~</p><!-- <p>UQC41</p> -->
+<p style="position:absolute;left:80px;top:320px">~HideTweets~/p><!-- <p>UQC41</p> -->
 <p style="position:absolute;left:40px;top:240px">~</p><!-- <p>NIA11</p> -->
 <p style="position:absolute;left:120px;top:260px">~</p><!-- <p>MET20</p> -->
 <p style="position:absolute;left:80px;top:120px">~</p><!-- <p>MV03</p> -->
