created update tweets button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Eco1</title>
   <%= stylesheet_link_tag    "application" %>
-  <%= javascript_include_tag "jquery", "rails", "highcharts" %>
+  <%= javascript_include_tag "jquery", "rails" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
