--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
   <tr>
     <th></th>
   </tr>
-<% @tweets.each do |tweet| %>
+<% @tweets1.each do |tweet| %>
   <tr>
 	<td>~</td>
     <td><%= tweet.tweet %></td>
