adding hash tags labels prior to tweets

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,11 +8,63 @@
 <table>
   <tr>
     <th></th>
+    <th></th>
   </tr>
+<div>Tweets1</div>
 <% @tweets1.each do |tweet| %>
   <tr>
 	<td>~</td>
+	<td>#<%= tweet.label %>
     <td><%= tweet.tweet %></td>
   </tr>
 <% end %>
 </table>
+<hr>
+
+<table>
+  <tr>
+    <th></th>
+    <th></th>
+  </tr>
+<div>Tweets2</div>
+<% @tweets2.each do |tweet| %>
+  <tr>
+	<td>~</td>
+	<td>#<%= tweet.label %>
+    <td><%= tweet.tweet %></td>
+  </tr>
+<% end %>
+</table>
+<hr>
+
+<table>
+  <tr>
+    <th></th>
+    <th></th>
+  </tr>
+<div>Tweets3</div>
+<% @tweets3.each do |tweet| %>
+  <tr>
+	<td>~</td>
+	<td>#<%= tweet.label %>
+    <td><%= tweet.tweet %></td>
+  </tr>
+<% end %>
+</table>
+<hr>
+
+<table>
+  <tr>
+    <th></th>
+    <th></th>
+  </tr>
+<div>Tweets4</div>
+<% @tweets4.each do |tweet| %>
+  <tr>
+	<td>~</td>
+	<td>#<%= tweet.label %>
+    <td><%= tweet.tweet %></td>
+  </tr>
+<% end %>
+</table>
+<hr>
