--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,66 +5,8 @@
 <h1>infravironment</h1>
 <div>Building Life Cycle Site</div>
 <hr>
-<table>
-  <tr>
-    <th></th>
-    <th></th>
-  </tr>
-<div>Tweets1</div>
-<% @tweets1.each do |tweet| %>
-  <tr>
-	<td>~</td>
-	<td>#<%= tweet.label %>
-    <td><%= tweet.tweet %></td>
-  </tr>
-<% end %>
-</table>
-<hr>
 
-<table>
-  <tr>
-    <th></th>
-    <th></th>
-  </tr>
-<div>Tweets2</div>
-<% @tweets2.each do |tweet| %>
-  <tr>
-	<td>~</td>
-	<td>#<%= tweet.label %>
-    <td><%= tweet.tweet %></td>
-  </tr>
-<% end %>
-</table>
-<hr>
-
-<table>
-  <tr>
-    <th></th>
-    <th></th>
-  </tr>
-<div>Tweets3</div>
-<% @tweets3.each do |tweet| %>
-  <tr>
-	<td>~</td>
-	<td>#<%= tweet.label %>
-    <td><%= tweet.tweet %></td>
-  </tr>
-<% end %>
-</table>
-<hr>
-
-<table>
-  <tr>
-    <th></th>
-    <th></th>
-  </tr>
-<div>Tweets4</div>
-<% @tweets4.each do |tweet| %>
-  <tr>
-	<td>~</td>
-	<td>#<%= tweet.label %>
-    <td><%= tweet.tweet %></td>
-  </tr>
-<% end %>
-</table>
-<hr>
+<%= render :partial => 'tweets1' %>
+<%= render :partial => 'tweets2' %>
+<%= render :partial => 'tweets3' %>
+<%= render :partial => 'tweets4' %>
