--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
 <div>Building Life Cycle Site</div>
 <hr>
 
-<%= render :partial => 'tweets1' %>
-<%= render :partial => 'tweets2' %>
-<%= render :partial => 'tweets3' %>
-<%= render :partial => 'tweets4' %>
+<div id='tweets1'><%= render :partial => 'tweets1' %></div>
+<div id='tweets2' style="display:none"><%= render :partial => 'tweets2' %></div>
+<div id='tweets3' style="display:none"><%= render :partial => 'tweets3' %></div>
+<div id='tweets4' style="display:none"><%= render :partial => 'tweets4' %></div>
