--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,11 +2,31 @@
   <div><%= submit_tag 'Update Tweets' %></div>
 <% end -%>
 
-<h1>infravironment</h1>
+<h1>infravironment</h1><p style="position:absolute;top:-10px;left:230px">delete this paragraph;;;;Requirement: #architecture, #economy, #cleanair, #openinnovation get removed and included inside tweet2 </br>transfer the working hover capability to the word quadrilateral</br>triangle needs a tweetsB, star needs a tweetC etc. I'm going to fill tweetsB with 16 unique hashtags, tweetsC with 16, tweetsD 16 etc.</br>once you refresh browser view, there are no tweets visible until hover over a shape name</br>hover over star, get tweetsC tweets; hover over triangle, destroy star tweets get tweetsB</br>No hard wiring shape names. They are just visual for purpose of spacing rows of tweets.</p>
 <div>Building Life Cycle Site</div>
 <hr>
 
-<div id='tweets1'><%= render :partial => 'tweets1' %></div>
-<div id='tweets2' style="display:none"><%= render :partial => 'tweets2' %></div>
-<div id='tweets3' style="display:none"><%= render :partial => 'tweets3' %></div>
-<div id='tweets4' style="display:none"><%= render :partial => 'tweets4' %></div>
+<div id='tweets1'style="position:absolute;left:180px"><%= render :partial => 'tweets1' %></div>
+<div id='tweets2' style="display:none;position:absolute;top:350px;left:180px"><%= render :partial => 'tweets2' %></div>
+<div id='tweets3' style="display:none;position:absolute;top:600px;left:180px"><%= render :partial => 'tweets3' %></div>
+<div id='tweets4' style="display:none;position:absolute;top:820px;left:180px"><%= render :partial => 'tweets4' %></div>
+
+
+<div>
+<p style="position:absolute;left:60px;top:520px">circle<!-- <p>UQC41</p> -->
+<p style="position:absolute;left:40px;top:360px">square</p><!-- <p>NIA11</p> -->
+<p style="position:absolute;left:80px;top:400px">oval</p><!-- <p>MET20</p> -->
+<p style="position:absolute;left:60px;top:120px">quadrilateral</p><!-- <p>MV03</p> -->
+<p style="position:absolute;left:40px;top:160px">triangle</p><!-- <p>NF51</p> -->
+<p style="position:absolute;left:50px;top:240px">pentagon</p><!-- <p>SNC7</p> -->
+<p style="position:absolute;left:90px;top:280px">decagram</p><!-- <p>MSP27</p> -->
+<p style="position:absolute;left:40px;top:560px">ellipse</p><!-- <p>PCP21</p> -->
+<p style="position:absolute;left:90px;top:480px">hexagram</p><!-- <p>EDT28</p> -->
+<p style="position:absolute;left:80px;top:600px">sphere</p><!-- <p>MRO22</p> -->
+<p style="position:absolute;left:90px;top:640px">nonagon</p><!-- <p>TPG3</p> -->
+<p style="position:absolute;left:50px;top:680px">polygon</p><!-- <p>TSR24</p> -->
+<p style="position:absolute;left:80px;top:200px">star</p><!-- <p>PLR40</p> -->
+<p style="position:absolute;left:60px;top:320px">trapezoid</p><!-- <p>DET18</p> -->
+<p style="position:absolute;left:60px;top:720px">rhombus</p><!-- <p>PCS25</p> -->
+<p style="position:absolute;left:50px;top:440px">kite</p><!-- <p>IDR15</p> -->
+</div>
