--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Eco1</title>
 
-  <%= javascript_include_tag "jquery", "rails" %>
+  <%= javascript_include_tag "jquery" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
