--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   <div><%= submit_tag 'Update Tweets' %></div>
 <% end -%>
 
-<h1>infravironment</h1><p style="position:absolute;top:-10px;left:230px">delete this paragraph;;;;Requirement: #architecture, #economy, #cleanair, #openinnovation get removed and included inside tweet2 </br>transfer the working hover capability to the word quadrilateral</br>triangle needs a tweetsB, star needs a tweetC etc. I'm going to fill tweetsB with 16 unique hashtags, tweetsC with 16, tweetsD 16 etc.</br>once you refresh browser view, there are no tweets visible until hover over a shape name</br>hover over star, get tweetsC tweets; hover over triangle, destroy star tweets get tweetsB</br>No hard wiring shape names. They are just visual for purpose of spacing rows of tweets.</p>
+<h1>infravironment</h1><p style="position:absolute;top:-10px;left:230px">delete this paragraph;;;;Requirement: #architecture, #economy, #cleanair, #openinnovation get removed and included inside tweet2 </br>transfer the working hover capability to the word quadrilateral</br>once you refresh browser view, there are no tweets visible until hover over a shape name</br>No hard wiring shape names. They are just visual for purpose of spacing rows of tweets.</p>
 <div>Building Life Cycle Site</div>
 <hr>
 
