--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Eco1</title>
-
+  <%= stylesheet_link_tag "home" %>
   <%= javascript_include_tag "jquery" %>
   <%= csrf_meta_tags %>
 </head>
