--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,11 +9,12 @@
 		<hr>
 	</div>
 
+	
 	<div id="sidebar">
-		<span id='one'>triangle</span></br>
-		<span id='two'>pentagon</span></br>
-		<span id='three'>star</span></br>
-		<span id='four'>moon</span>
+		<span id='one'><div id="r1"></div></span></br>
+		<span id='two'><div id="r2"></div></span></br>
+		<span id='three'><div id="r3"></div></span></br>
+		<span id='four'><div id="r4"></div></span>
 	</div>
 
 	<div id="content">
