--- a/app/views/home/_tweets3.html.erb
+++ b/app/views/home/_tweets3.html.erb
@@ -3,7 +3,7 @@
     <th></th>
     <th></th>
   </tr>
-<div>Tweets3</div>
+<!--<div>Tweets3</div>-->
 <% @tweets3.each do |tweet| %>
   <tr>
 	<td>~</td>
