--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,8 +4,8 @@
 		  <div align='right'><%= submit_tag 'Update Tweets' %></div>
 		<% end -%>
 
-		<h1>infravironment</h1><p style="position:absolute;top:-10px;left:230px">
-		<div>Building Life Cycle Site</div>
+		<h1><font face="arial">infravironment</h1><p style="position:absolute;top:-10px;left:230px">
+		<div>Building Life Cycle Site</div></font>
 		<hr>
 	</div>
 
