--- a/app/views/home/_tweets2.html.erb
+++ b/app/views/home/_tweets2.html.erb
@@ -3,7 +3,7 @@
     <th></th>
     <th></th>
   </tr>
-<div>Tweets2</div>
+<!--<div>Tweets2</div>-->
 <% @tweets2.each do |tweet| %>
   <tr>
 	<td>~</td>
