--- a/app/views/home/_tweets4.html.erb
+++ b/app/views/home/_tweets4.html.erb
@@ -3,7 +3,7 @@
     <th></th>
     <th></th>
   </tr>
-<div>Tweets4</div>
+<!--<div>Tweets4</div>-->
 <% @tweets4.each do |tweet| %>
   <tr>
 	<td>~</td>
