--- a/app/views/home/_tweets4.html.erb
+++ b/app/views/home/_tweets4.html.erb
@@ -7,7 +7,7 @@
 <% @tweets4.each do |tweet| %>
   <tr>
 	<td>~</td>
-	<td id="clickme">#<a href="http://twitter.com/#!/search/<%= tweet.label %>" target="new"><%= tweet.label %></a></td>
+	<td id="clickme">#<a href="http://twitter.com/#!/search/%23<%= tweet.label %>" target="new"><%= tweet.label %></a></td>
     <td><%= tweet.tweet %></td>
   </tr>
 <% end %>
