--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,10 +3,12 @@
 		<%= form_tag(update_tweets_path) do -%>
 		  <div align='right'><%= submit_tag 'Update Tweets' %></div>
 		<% end -%>
-		<h1><font face="arial">infravironment</h1><p style="position:absolute;top:-10px;left:230px">
-		<div>Building Life Cycle Site</div></font>
+		<h1 style="position:relative;left:20px;top:30px"><font face="arial">infravironment</font></h1>
+			<p style="position:relative;left:220px"><font face="arial" size="1">Trademark</font></p>
+		<font face="arial"><div style="position:relative;left:20px">Building Life Cycle Site</div></font>
 		<hr>
 	</div>
+	<p style="position:absolute;top:700px;left:120px"><font face="arial" size="1">Disclaimer: Use constitutes acceptance that the owner of this site cannot guarantee and shall under no circumstances be held responsible for the local recombination </br> of any request, cache, password, readout, email, policy, input, file, identity, service, download, agreement, tracking, session, product, logon, or chat that is transmitted in packets.</font></p>
 
 	
 	<div id="sidebar">
