--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,8 +3,8 @@
 		<%= form_tag(update_tweets_path) do -%>
 		  <div align='right'><%= submit_tag 'Update Tweets' %></div>
 		<% end -%>
-		<h1 style="position:relative;left:20px;top:30px"><font face="arial">infravironment</font></h1>
-			<p style="position:relative;left:220px"><font face="arial" size="1">Trademark</font></p>
+		<h1 style="position:relative;left:20px;top:5px"><font face="arial">infravironment</font></h1>
+			<p style="position:relative;left:220px;top:-20px"><font face="arial" size="1">Trademark</font></p>
 		<font face="arial"><div style="position:relative;left:20px">Building Life Cycle Site</div></font>
 		<hr>
 	</div>
@@ -16,14 +16,14 @@
 		<span id='two'><div id="r2"></div></span></br>
 		<span id='three'><div id="r3"></div></span></br>
 		<span id='four'><div id="r4"></div></span></br>
-		<span id='five'><div id="r1"></div></span></br>
-		<span id='six'><div id="r2"></div></span></br>
-		<span id='seven'><div id="r3"></div></span></br>
-		<span id='eight'><div id="r4"></div></span></br>
-		<span id='nine'><div id="r1"></div></span></br>
-		<span id='ten'><div id="r2"></div></span></br>
-		<span id='eleven'><div id="r3"></div></span></br>
-		<span id='twelve'><div id="r4"></div></span></br>
+		<span id='five'><div id="r5"></div></span></br>
+		<span id='six'><div id="r6"></div></span></br>
+		<span id='seven'><div id="r7"></div></span></br>
+		<span id='eight'><div id="r8"></div></span></br>
+		<span id='nine'><div id="r9"></div></span></br>
+		<span id='ten'><div id="r10"></div></span></br>
+		<span id='eleven'><div id="r11"></div></span></br>
+		<span id='twelve'><div id="r12"></div></span></br>
 	</div>
 
 	<div id="content">
@@ -55,6 +55,9 @@ $("span#one").hover(
 		// Animation complete.
 	$("div#tweets5").hide('fast', function() {
 		// Animation complete.
+	$("div#tweets6").hide('fast', function() {
+		// Animation complete.
+	});
   	});	
   	});
   	});
@@ -76,6 +79,9 @@ $("span#two").hover(
 		// Animation complete.
 	$("div#tweets5").hide('fast', function() {
 		// Animation complete.
+	$("div#tweets6").hide('fast', function() {
+		// Animation complete.
+	});
   	});
   	});				
   	});
@@ -97,6 +103,9 @@ $("span#three").hover(
 		// Animation complete.
 	$("div#tweets5").hide('fast', function() {
 		// Animation complete.
+	$("div#tweets6").hide('fast', function() {
+		// Animation complete.
+	});
   	});
   	});				
   	});
@@ -118,6 +127,9 @@ $("span#four").hover(
 		// Animation complete.
 	$("div#tweets5").hide('fast', function() {
 		// Animation complete.  
+	$("div#tweets6").hide('fast', function() {
+		// Animation complete.
+	});
   	});
 	});				
   	});
@@ -140,6 +152,9 @@ $("span#five").hover(
 		// Animation complete.
 	$("div#tweets5").show('fast', function() {
 		// Animation complete.  
+	$("div#tweets6").hide('fast', function() {
+		// Animation complete.
+	});
   	});
 	});				
   	});
@@ -147,3 +162,30 @@ $("span#five").hover(
   	});
 });
 </script>
+
+
+<script>
+$("span#six").hover(
+  function () {
+    $("div#tweets1").hide('fast', function() {
+	    // Animation complete.
+	$("div#tweets2").show('fast', function() {
+		// Animation complete.
+	$("div#tweets3").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets4").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets5").hide('fast', function() {
+		// Animation complete.
+	$("div#tweets6").hide('fast', function() {
+		// Animation complete.
+  	});
+  	});				
+  	});
+  	});
+  	});
+	});
+});
+</script>
+
+
