--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <div id="wrapper">
 	<div id="header"> 
 		<%= form_tag(update_tweets_path) do -%>
-		  <div align='right'><%= submit_tag 'Update Tweets' %></div>
+		  <div align='right' style="display:none"><%= submit_tag 'Update Tweets' %></div>
 		<% end -%>
 		<h1 style="position:relative;left:20px;top:5px"><font face="arial">infravironment</font></h1>
 			<p style="position:relative;left:220px;top:-20px"><font face="arial" size="1">Trademark</font></p>
