--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <div id="wrapper">
 	<div id="header"> 
 		<%= form_tag(update_tweets_path) do -%>
-		  <div align='right'style="display:none"><%= submit_tag 'Update Tweets' %></div>
+		  <div align='right'><%= submit_tag 'Update Tweets' %></div>
 		  <span id="clear"><div style="position:relative;left:450px;top:120px"><%= submit_tag 'Clear Tags' %></div></span>
 		<% end -%>
 		<h1 style="position:relative;left:20px;top:30px"><font face="arial">infravironment</font></h1>
@@ -14,11 +14,11 @@
 	
 	<div id="sidebar">
 		<span id='one'><div id="r1"></div></span></br>
-		<span id='two'><div id="r2" style="position:relative;top:-10px"></div></span></br>
+		<span id='two'><div id="r2" style="position:relative;top:-15px"></div></span></br>
 		<span id='three'><div id="r3"></div></span></br>
-		<span id='four'><div id="r4"></div></span></br>
+		<span id='four'><div id="r4" style="position:relative;top:-15px"></div></span></br>
 		<span id='five'><div id="r5"></div></span></br>
-		<span id='six'><div id="r6"></div></span></br>
+		<span id='six'><div id="r6" style="position:relative;top:5px"></div></span></br>
 		<span id='seven'><div id="r7"></div></span></br>
 		<span id='eight'><div id="r8"></div></span></br>
 		<span id='nine'><div id="r9"></div></span></br>
