--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,6 +11,8 @@
 	</div>
 	<p style="position:absolute;top:700px;left:120px"><font face="arial" size="1">Disclaimer: Use constitutes acceptance that the owner of this site cannot guarantee and shall under no circumstances be held responsible for the local recombination </br> of any request, cache, password, readout, email, policy, input, file, identity, service, download, agreement, tracking, session, product, logon, or chat that is transmitted in packets.</font></p>
 
+	<p style="position:absolute;left:220px;top:800px"><font face="arial" size="1">C Eric D. 2011</font></p>
+
 	
 	<div id="sidebar">
 		<span id='one'><div id="r1"></div></span></br>
