--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,9 @@
 <div id="wrapper">
 	<div id="header"> 
-		<%= form_tag(update_tweets_path) do -%>
+		<!-- <%= form_tag(update_tweets_path) do -%>
 		  <div align='right'><%= submit_tag 'Update Tweets' %></div>
 		  <span id="clear"><div style="position:relative;left:450px;top:120px"><%= submit_tag 'Clear Tags' %></div></span>
-		<% end -%>
+		<% end -%> -->
 		<h1 style="position:relative;left:20px;top:30px"><font face="arial">infravironment</font></h1>
 			<p style="position:relative;left:220px;top:5px"><font face="arial" size="1">Trademark</font></p>
 		<font face="arial"><div style="position:relative;left:20px">Building Life Cycle Site</div></font>
